[gd_scene load_steps=6 format=3 uid="uid://dvywf04ojlrjk"]

[ext_resource type="Script" path="res://Tools/mine.gd" id="1_jrgsl"]

[sub_resource type="CylinderMesh" id="CylinderMesh_iiwl3"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_os1hj"]
height = 0.134675

[sub_resource type="SphereShape3D" id="SphereShape3D_fogld"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rkcn6"]
radius = 2.75651

[node name="mine" type="RigidBody3D"]
top_level = true
script = ExtResource("1_jrgsl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.298848, 0, 0, 0, 0.0204784, 0, 0, 0, 0.298848, 0, 0, 0)
mesh = SubResource("CylinderMesh_iiwl3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.307812, 0, 0, 0, 0.307812, 0, 0, 0, 0.307812, 0, 0, 0)
shape = SubResource("CylinderShape3D_os1hj")

[node name="DetectZone" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectZone"]
shape = SubResource("SphereShape3D_fogld")

[node name="ExplosionZone" type="Area3D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="ExplosionZone"]
shape = SubResource("SphereShape3D_rkcn6")

[connection signal="area_entered" from="DetectZone" to="." method="_on_detect_zone_area_entered"]
[connection signal="area_exited" from="ExplosionZone" to="." method="_on_explosion_zone_area_exited"]
